# Pumpkin

./: Cargo.toml
pumpkin/: Cargo.toml
pumpkin/src/block/: registry.rs
pumpkin/src/block/blocks/: mod.rs  sponge.rs
pumpkin/src/command/: dispatcher.rs
pumpkin/src/command/commands/: ban.rs  banip.rs
pumpkin/src/data/: banned_player.rs
pumpkin/src/entity/: mod.rs  player.rs
pumpkin/src/entity/decoration/: armor_stand.rs
pumpkin/src/entity/projectile/: egg.rs  firework_rocket.rs  mod.rs  snowball.rs  wind_charge.rs
pumpkin/src/item/items/: egg.rs  snowball.rs
pumpkin/src/net/: mod.rs
pumpkin/src/net/java/: play.rs
pumpkin/src/plugin/api/events/player/: mod.rs  player_death.rs  player_move.rs
pumpkin/src/server/: mod.rs
pumpkin/src/world/: mod.rs
skrs/: Cargo.toml  FuryHardcore_v1.0.0.sk  MasterEssentialsV.31.46.1sk  variables.csv
skrs/Skript-master/: .gitignore  .gitmodules  CLOCKWORK_RELEASE_MODEL.md  LICENSING.md  README.md  build.gradle  checkstyle.xml  code-conventions.md  gradle.properties  settings.gradle
skrs/Skript-master/.github/: CODEOWNERS  contributing.md  dependabot.yml  pull_request_template.md
skrs/Skript-master/.github/ISSUE_TEMPLATE/: bug-report.yml
skrs/Skript-master/.github/workflows/: archive-docs.yml  checkstyle.yml  cleanup-docs.yml  java-21-builds.yml  junit-21-builds.yml  nightly-docs.yml  parallelize-tests.yml  release-docs.yml  repo.yml  update-gradle-wrapper.yml
skrs/Skript-master/.github/workflows/docs/generate-docs/: action.yml
skrs/Skript-master/.github/workflows/github-issues/: issues-labeled.yml
skrs/Skript-master/src/main/resources/: config.sk  plugin.yml
skrs/Skript-master/src/main/resources/lang/: default.lang  dutch.lang  english.lang  french.lang  german.lang  japanese.lang  korean.lang  polish.lang  russian.lang  simplifiedchinese.lang  turkish.lang
skrs/Skript-master/src/test/resources/: invalid-config.sk  new-config.sk  old-config.sk
skrs/Skript-master/src/test/skript/: README.md
skrs/Skript-master/src/test/skript/environments/java21/: paper-1.21.1.json  paper-1.21.10.json  paper-1.21.11.json  paper-1.21.3.json  paper-1.21.4.json  paper-1.21.5.json  paper-1.21.8.json  paper-1.21.json
skrs/Skript-master/src/test/skript/junit/: BellEvents.sk  BrewingEventsTest.sk  CancelledEventTest.sk  CondChatVisibility.sk  EffCancelEvent.sk  EffGoatHornsTest.sk  EntryContainerTest.sk  EventValueExpression.sk  EvtBeaconTest.sk  EvtBreed.sk  EvtBroadcast.sk  EvtBucketEntity.sk  EvtExperienceCooldownChangeTest.sk  EvtFireworkTest.sk  EvtFish.sk  EvtFurnaceTest.sk  EvtGrow.sk  EvtHarvestBlockTest.sk  EvtPiglinBarter.sk  EvtPlayerArmorChangeTest.sk  EvtPlayerInput.sk  EvtVaultDisplayItemTest.sk  EvtVehicleCollisionTest.sk  EvtVehicleEnterTest.sk  EvtVillagerCareerChangeTest.sk  ExprAffectedEntities.sk  ExprHoverList.sk  ExprLootContextLooter.sk  ExprWeatherTest.sk  PlayerElytraBoostEventTest.sk  StructTestSubValidators.sk
skrs/Skript-master/src/test/skript/tests/bukkit/: potion module.sk
skrs/Skript-master/src/test/skript/tests/general/: DamageSource.sk  EquippableComponents.sk  InteractionEntities.sk
skrs/Skript-master/src/test/skript/tests/misc/: -disabled.sk  EntityData.sk  EventValues.sk  angle.sk  boats.sk  custom default values.sk  custom operators.sk  default variables.sk  displaydata.sk  displays.sk  dummy.sk  experience to number.sk  expression list parsing.sk  expression sections.sk  function overloading.sk  item data serialization.sk  keyed set mode.sk  legacy script name.sk  literal multiple infos warning.sk  literal specification.sk  registry-enum-comparators.sk  registry.sk  scientific notation.sk  striderdata.sk  sub entity datas.sk  supported events.sk  test expressions.sk  timespans.sk  type hints.sk  underscores in numbers.sk  unicode.sk
skrs/Skript-master/src/test/skript/tests/regressions/: 2535-foxdata fixes.sk  2537-missing mooshroom variations in 1.14+.sk  2581-all potions are water.sk  2584-health-utils-update.sk  2625-villager comparisons.sk  2711-item-compares.sk  3253-entitydata fixes.sk  3281-itemamount fixes.sk  3303-item durability.sk  3314-chunk is loaded.sk  3419-item comparisons.sk  4773-composter-the-imposter.sk  4938-time played.sk  4988-function uuid multiple parameters.sk  5345-any-aliases-random.sk  5491-xp orb merge overwrite.sk  551-item amount on itemstacks.sk  5566-block iterator being 100 always.sk  5804-is-burning.sk  5829-entities in chunk.sk  6032-local-vars-created-in-effsecspawn.sk  6288-event data priority pollution.sk  6290-item-inventory-conflict.sk  6361-function-param.sk  6424-inventory-holder-location.sk  6586-effhealth item mutation.sk  6612-nearest entity cast error.sk  6623-wrong parsing order for math.sk  6707-spawn-fish-types.sk  6746-spawn-dropped-item.sk  6762-cant spawn a firework.sk  6811-inventory-holder-location-doublechest.sk  6817-null of x incorrect type.sk  7024-efflook-stack-trace  7054-update event cancelling.sk  7059-exponent overflow.sk  7067-events in structs.sk  7081-time of worlds.sk  (+46 more)
skrs/skript-reflect-2.x/: .editorconfig  README.md  build.gradle
skrs/skript-reflect-2.x/.github/workflows/: gradle.yml
skrs/skript-reflect-2.x/src/test/scripts/custom/: custom condition.sk  custom constants.sk  custom effects.sk  custom events.sk  custom expressions.sk
skrs/skript-reflect-2.x/src/test/scripts/reflect/: EffImport.sk  ExprJavaCall.sk  StructImport.sk
skrs/src/: lib.rs  plugin.rs
skrs/src/commands/: mod.rs  script_commands.rs  skript.rs  tempban.rs
skrs/src/commands/args/: ask_server_string.rs  mod.rs
skrs/src/effects/: add.rs  broadcast.rs  increase.rs  mod.rs  remove.rs  replace.rs  reset.rs  send.rs  set.rs
skrs/src/parser/: ast.rs  event_parser.rs  line_parser.rs  mod.rs
skrs/src/registry/: conditions.rs  effects.rs  events.rs  expressions.rs  functions.rs  mod.rs  options.rs  variables.rs
skrs/src/runtime/: context.rs  dispatcher.rs  executor.rs  expr.rs  functions.rs  mod.rs  rotate_poller.rs  value.rs  vars.rs
skrs/src/script/: loader.rs  manager.rs  mod.rs  script.rs
skrs/src/util/: diagnostics.rs  mod.rs
(+1990 files in other folders)
