[workspace]
resolver = "3"
members = [
    "pumpkin-api-macros",
    "pumpkin-config",
    "pumpkin-util",
    "pumpkin-inventory",
    "pumpkin-macros/",
    "pumpkin-protocol/",
    "pumpkin-world",
    "pumpkin/",
    "pumpkin-data",
    "skrs",
]


[workspace.lints.clippy]
# Groups
all = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

if_then_some_else_none = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
separated_literal_suffix = "deny"
semicolon_outside_block = "deny"
non_zero_suggestions = "deny"
string_lit_chars_any = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
branches_sharing_code = "deny"
equatable_if_let = "deny"
option_if_let_else = "deny"
needless_pass_by_ref_mut = "deny"
needless_collect = "deny"
redundant_clone = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Expected/Allowed 
cargo_common_metadata = "allow"
cast_precision_loss = "allow"
multiple_crate_versions = "allow"
single_call_fn = "allow"
unreadable_literal = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"

[workspace.package]
version = "0.1.0-dev+1.21.11"
edition = "2024"
rust-version = "1.89"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.dependencies]
log = "0.4"
tokio = { version = "1.49", default-features = false }
syn = { version = "2.0", default-features = false, features=["printing"] }


thiserror = "2.0"

bytes = "1.11"

# Concurrency/Parallelism and Synchronization
futures = { version = "0.3", default-features = false, features = ["executor"] }
rayon = "1.11"
crossbeam = "0.8"

uuid = { version = "1.20", features = ["serde", "v3", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tempfile = { version = "3.24.0", default-features = false }
proc-macro-error2 = "2"
aes = "0.8"
async-compression = "0.4.37"
base64 = "0.22.1"
bitflags = "2.10.0"
cesu8 = "1.1"
cfb8 = "0.8"
colored = "3.1"
console-subscriber = { version = "0.5.0", default-features = false }
crc-fast = "1.10.0"
criterion = { version = "0.8", default-features = false }
crossbeam-utils = "0.8.21"
crossfire = "2.1.10"
dashmap = "6.1"
ecdsa = "0.16.9"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
flate2 = "1.1.8"
heck = "0.5"
hmac = "=0.13.0-rc.3"
indexmap = "2.13"
itertools = "0.14.0"
libloading = "0.9"
lru = "0.16.3"
lz4-java-wrc = "0.2.0"
md5 = "0.8"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.17.0"
p384 = "0.13.1"
phf = "0.13.1"
pkcs8 = "=0.11.0-rc.9"
proc-macro2 = "1.0"
pumpkin-config = { path = "pumpkin-config" }
pumpkin-data = { path = "pumpkin-data" }
pumpkin-inventory = { path = "pumpkin-inventory" }
pumpkin-macros = { path = "pumpkin-macros" }
pumpkin-nbt = { path = "pumpkin-nbt" }
pumpkin-protocol = { path = "pumpkin-protocol" }
pumpkin-util = { path = "pumpkin-util" }
pumpkin-world = { path = "pumpkin-world" }
quote = "1.0"
rand = { git = "https://github.com/rust-random/rand"}
rsa = "=0.10.0-rc.13"
rustc-hash = "2.1.1"
rustyline = "17.0.2"
ruzstd = "0.8.2"
serde_json5 = "0.2.1"
sha1 = "=0.11.0-rc.4"
sha2 = "=0.11.0-rc.4"
signature = "2.2.0"
simplelog = "0.12.2"
slotmap = "1.1"
take_mut = "0.2.2"
temp-dir = "0.1.16"
thread_local = "1.1.9"
time = "0.3"
arc-swap = "1.8"
tokio-util = "0.7.18"
toml = "0.9"
ureq = "3.1.4"
