[package]
name = "pumpkin"
version.workspace = true
description = "Empowering everyone to host fast and efficient Minecraft servers."
edition.workspace = true
rust-version.workspace = true

[package.metadata.tauri-winres]
# FileDescription is handled as the Program name by Windows!
FileDescription = "Pumpkin"
OriginalFilename = "pumpkin.exe"
LegalCopyright = "Copyright © 2025 Aleksander Medvedev"

# Required to expose pumpkin plugin API
[lib]
doctest = false

[dependencies]
# pumpkin
arc-swap.workspace = true
pumpkin-util.workspace = true
pumpkin-nbt.workspace = true
pumpkin-config.workspace = true
pumpkin-inventory.workspace = true
pumpkin-world.workspace = true
pumpkin-data.workspace = true
pumpkin-protocol.workspace = true
pumpkin-macros.workspace = true

log.workspace = true
crossbeam.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-std",
    "signal",
    "fs",
    "io-util",
    "time",
] }
thiserror.workspace = true
futures.workspace = true

# config
serde.workspace = true
serde_json.workspace = true

bytes.workspace = true

rand.workspace = true

num-bigint.workspace = true

# Console line reading
rustyline.workspace = true

# encryption
rsa = { workspace = true, features = ["sha1"] }
pkcs8.workspace = true

# authentication
ureq = { workspace = true, features = ["json"] }


sha1.workspace = true

# velocity en
hmac.workspace = true
sha2.workspace = true

base64.workspace = true

# logging
simplelog = { workspace = true, features = ["ansi_term"] }

# Remove time in favor of chrono?
time = { workspace = true, features = ["parsing", "macros"] }

# plugins
libloading.workspace = true
rustc-hash.workspace = true

# Task handling
tokio-util = { workspace = true, features = ["rt"] }

flate2.workspace = true
console-subscriber = { workspace = true, optional = true }
signature.workspace = true
[dev-dependencies]
tempfile.workspace = true


[features]
console-subscriber = ["dep:console-subscriber"]
tokio_taskdump = ["pumpkin-world/tokio_taskdump"]

[lints]
workspace = true
